--- a/energy/src/main/resources/application.properties
+++ b/energy/src/main/resources/application.properties
@@ -7,13 +7,13 @@ spring.thymeleaf.cache=false
 server.port=8081
 server.address=0.0.0.0
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.pattern.dateformat=HH:mm
 
 # Nivel de log para las sentencias SQL generadas por Hibernate
-logging.level.org.hibernate.SQL=WARN
+#logging.level.org.hibernate.SQL=WARN
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Nivel de log para los descriptores SQL BasicBinder
@@ -23,3 +23,13 @@ net.sf.jasperreports.export.docx.flexible.row.height=true
 
 spring.mvc.view.prefix=/static/
 spring.mvc.view.suffix=.html
+
+# Desactiva el log de SQL
+spring.jpa.show-sql=false
+
+# Desactiva el log de Hibernate
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type.descriptor.sql.BasicTypeDescriptor=OFF
+
+logging.level.root=INFO
+logging.level.eh.projects.energy.Services=DEBUG
